# crushermitra-ai

./: .codex-dev.err  .codex-dev.out  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/ai-service/: pyproject.toml
apps/ai-service/app/: __init__.py  config.py  main.py  worker.py
apps/ai-service/app/routers/: health.py  tools.py
apps/web/: middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css
apps/web/components/: crushermitra-logo.tsx  india-location-selects.tsx  workflow-workspace.tsx
apps/web/i18n/: request.ts
apps/web/lib/: admin-data.ts  admin-session.ts  auth-database.ts  database-errors.ts  india-locations.ts  leads-store.ts  notifications.ts  plans.ts  (+2 more)
apps/worker/: package.json
docs/admin/: platform-admin.md
docs/api/: master-data.md
docs/architecture/: database-design.md  phase-0-assessment.md  security-model.md  system-design.md
docs/remediation/: environment-assessment.md  phase-3-master-data.md  phase-4-inventory-ledger.md  remediation-plan.md
docs/testing/: bug-report.md  feature-coverage-matrix.md  full-application-test-plan.md  limitations-and-gaps.md  release-readiness.md  test-execution-report.md  ux-review.md
docs/workflows/: core-workflows.md  phased-task-checklist.md
infrastructure/docker/: ai-service.Dockerfile  postgres.Dockerfile  web.Dockerfile
infrastructure/scripts/: preview-server.mjs
tests/e2e/: critical-workflows.spec.ts
(+84 files in other folders)
